--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "identity-obj-proxy": "^3.0.0",
     "next": "^11.1.4",
@@ -59,6 +60,7 @@
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.5.0",
     "@types/next-redux-wrapper": "^3.0.0",
